RESOLVED FIXED161063
Sample Process on notifyDone timed out
https://bugs.webkit.org/show_bug.cgi?id=161063
Summary Sample Process on notifyDone timed out
Jonathan Bedard
Reported 2016-08-22 16:20:18 PDT
As with other forms of timeouts, sample or spindump should be called to determine the cause of the timeout.
Attachments
Patch (2.90 KB, patch)
2016-08-22 16:24 PDT, Jonathan Bedard
no flags
Patch (2.90 KB, patch)
2016-08-22 17:17 PDT, Jonathan Bedard
no flags
Jonathan Bedard
Comment 1 2016-08-22 16:24:36 PDT
Jonathan Bedard
Comment 2 2016-08-22 16:30:53 PDT
A few notes about this patch: There are a number of techniques used in this patch that do not seem to adhere to the architecture of WebKit. This particular code path is classified as a timeout, but the location and logging of this type of error is consistent with a text difference rather than a timeout or a crash. Because of this, the mechanisms used in the TestController are unavailable to this class, hence the hard-coding of the process name. It is possible to entirely define TestController::webProcessName() in the TestController header, which allows the InjectedBundle library to access this function, but such a change seemed to violate the intent and future plans for the function.
Alexey Proskuryakov
Comment 3 2016-08-22 16:54:09 PDT
Comment on attachment 286636 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=286636&action=review > Tools/WebKitTestRunner/InjectedBundle/TestRunner.cpp:163 > + snprintf(buffer, sizeof(buffer), "#PID UNRESPONSIVE - %s (pid %d)\n", "com.apple.WebKit.WebContent.Development", getpid()); The current process name can be taken from getprogname(), although that's not portable.
Jonathan Bedard
Comment 4 2016-08-22 17:04:32 PDT
(In reply to comment #3) > Comment on attachment 286636 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=286636&action=review > > > Tools/WebKitTestRunner/InjectedBundle/TestRunner.cpp:163 > > + snprintf(buffer, sizeof(buffer), "#PID UNRESPONSIVE - %s (pid %d)\n", "com.apple.WebKit.WebContent.Development", getpid()); > > The current process name can be taken from getprogname(), although that's > not portable. Well, neither are sample and spindump, all of the code for this has been port specific so far anyways.
Jonathan Bedard
Comment 5 2016-08-22 17:17:41 PDT
WebKit Commit Bot
Comment 6 2016-08-29 09:25:38 PDT
Comment on attachment 286642 [details] Patch Clearing flags on attachment: 286642 Committed r205123: <http://trac.webkit.org/changeset/205123>
WebKit Commit Bot
Comment 7 2016-08-29 09:25:47 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.