Sample Process on notifyDone timed out https://bugs.webkit.org/show_bug.cgi?id=161063

Patch by Jonathan Bedard <jbedard@apple.com> on 2016-08-29
Reviewed by Darin Adler.

* Scripts/webkitpy/port/driver.py:
(Driver._check_for_driver_timeout):
* WebKitTestRunner/InjectedBundle/TestRunner.cpp: Call sample_process during notifyDone timeouts.
(WTR::TestRunner::waitToDumpWatchdogTimerFired):
* WebKitTestRunner/InjectedBundle/mac/TestRunnerMac.mm: Log pid and name for testing harness.

Canonical link: https://commits.webkit.org/179497@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205123 268f45cc-cd09-0410-ab3c-d52691b4dbfc